<resources>
    <string name="app_name">ВерЭкс Грузоперевозки</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_driver">Водитель</string>
    <string name="title_truck">Транспорт</string>
    <string name="title_start">Смена</string>
    <string name="title_history">История</string>
    <string name="title_message">Сообщения</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
